welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:35: error: Unmatched closing brace '}' ignored here
}
^